Create temporary frontend skeleton and adjust routing to it

--- a/jobaid/templates/jobaid/about.html
+++ b/jobaid/templates/jobaid/about.html
@@ -1,4 +1,6 @@
-{% extends "jobaid/base.html" %}
+{% extends "base.html" %}
 {% block content %}
-    <h1>About Page</h1>
+    <div class="about">
+        <h2 class="about__title">About page</h2>
+    </div>
 {% endblock content %}
