--- a/salary_prediction/templates/salary_prediction/salary_prediction.html
+++ b/salary_prediction/templates/salary_prediction/salary_prediction.html
@@ -1,4 +1,7 @@
-{% extends "salary_prediction/base.html" %}
+{% extends "base.html" %}
 {% block content %}
-    <h1>Salary Prediction Page</h1>
+    <h2>Salary Prediction Page</h2>
+    <h3>form to gather user paramethers</h3>
+    <h3>some fancy image</h3>
+    <h3>output box, with some recomendations, maybe some chart</h3>
 {% endblock content %}
