Create temporary filter form and job offer template (frontend)

--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'styles/header.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'styles/navigation.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'styles/footer.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'styles/common.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static app|add:'/styles/'|add:page|add:'.css' %}">
 
     <!-- these two files will be downloaded in static files in production! -->
