--- a/job_offers/templates/job_offers/content.html
+++ b/job_offers/templates/job_offers/content.html
@@ -4,8 +4,144 @@
 
 {% block content %}
 
-    <h2 class="title">Job Offers Page</h2>
-    <p class="paragraph">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Placeat, doloremque. Odit a officia ipsa quisquam atque animi qui sequi quae eos quibusdam, voluptatibus dignissimos maiores, eligendi vitae impedit ducimus sint fuga. Consequuntur aliquam necessitatibus quasi incidunt explicabo. Nemo accusantium suscipit, ad aspernatur maxime similique nulla qui? Cum blanditiis repellendus reprehenderit.</p>
+    <section class="content__section filter">
+    <h2 class="content__subtitle filter__title">Enter your preferences:</h2>
+    <form action="/" method="POST" class="filter__form form">
+        {% csrf_token %}
+        <div class="form__row">
+            <div class="form__item technologies">
+                <label class="form__label technologies__title">technologies:</label>
+                <input type="text" name="technologies" class="form__input technologies__input">
+            </div>
+            <div class="form__item experience">
+                <label class="form__label experience__title">experience:</label>
+                <select name="experience_level" class="form__input experience__select">
+                    <option class="experience__option" value="junior">junior</option>
+                    <option class="experience__option" value="mid">mid</option>
+                    <option class="experience__option" value="senior">senior</option>
+                </select>
+            </div>
+        </div>
+        <div class="form__row">  
+            <div class="form__item location">
+                <label class="form__label location__title">location:</label>
+                <input type="text" name="location" class="form__input location__input">
+            </div>
+            <div class="form__item contracts">
+                <label class="form__label contracts__title">contracts:</label>
+                <div class="contracts__container">
+                    <input type="checkbox" name="b2b" class="contracts__checkbox">
+                    <label class="form__label contracts__label">B2B</label>
+                    <input type="checkbox" name="uop" class="contracts__checkbox">
+                    <label class="form__label contracts__label">UOP</label>
+                </div>
+            </div>
+            <div class="form__item salary">
+                <label class="form__label salary__title">salary:</label>
+                <div class="salary__container">
+                    <input type="number" name="fork_min" class="form__input salary__input" placeholder="min">
+                    <span class="salary__separator">-</span>
+                    <input type="number" name="fork_max" class="form__input salary__input" placeholder="max">
+                </div>
+            </div>
+        </div>
+        <div class="form__row submit">
+            <button type="submit" class="form__submit">search</button>
+        </div>
+    </form>
+    </section>
+    <section class="content__section offers">
+        <h2 class="content__subtitle offers__title">Matched job offers:</h2>
+        <div class="offer__list">
+            <article class="offer__item">
+                <div class="item__row item__title">
+                    <span class="offer__name">JavaScript Senior Developer</span>
+                    <span class="offer__experience">senior</span>
+                    <span class="offer__location">Warszawa</span>
+                </div>
+                <div class="item__row item__details">
+                    <div class="offer__languages">
+                        <span class="details__prefix">languages:</span>
+                        <span class="language__item">JavaScript</span>
+                        <span class="language__item">TypeScript</span>
+                        <span class="language__item">HTML5</span>
+                        <span class="language__item">SCSS</span>
+                    </div>
+                    <div class="offer__technologies">
+                        <span class="details__prefix">technologies:</span>
+                        <span class="technology__item">React</span>
+                        <span class="technology__item">Angular</span>
+                        <span class="technology__item">Redux</span>
+                    </div>
+                    <div class="offer__finances">
+                        <span class="details__prefix">salary:</span>
+                        <span class="offer__salary">12 000 - 15 000 PLN</span>
+                        <span class="offer__contracts">B2B / UOP</span>
+                    </div>
+                </div>
+                <div class="item__row item__link">
+                    <a href="https://bulldogjob.pl/companies/jobs" class="offer__link">external offer link</a>
+                </div>
+            </article>
+            <article class="offer__item">
+                <div class="item__row item__title">
+                    <span class="offer__name">Python Software Engenieer</span>
+                    <span class="offer__experience">junior</span>
+                    <span class="offer__location">Kraków</span>
+                </div>
+                <div class="item__row item__details">
+                    <div class="offer__languages">
+                        <span class="details__prefix">languages:</span>
+                        <span class="language__item">Python</span>
+                    </div>
+                    <div class="offer__technologies">
+                        <span class="details__prefix">technologies:</span>
+                        <span class="technology__item">Django</span>
+                        <span class="technology__item">Flask</span>
+                    </div>
+                    <div class="offer__finances">
+                        <span class="details__prefix">salary:</span>
+                        <span class="offer__salary">4 000 - 6 000 PLN</span>
+                        <span class="offer__contracts">UOP</span>
+                    </div>
+                </div>
+                <div class="item__row item__link">
+                    <a href="https://bulldogjob.pl/companies/jobs" class="offer__link">external offer link</a>
+                </div>
+            </article>
+            <article class="offer__item">
+                <div class="item__row item__title">
+                    <span class="offer__name">.NET Regular Developer</span>
+                    <span class="offer__experience">mid</span>
+                    <span class="offer__location">Wrocław</span>
+                </div>
+                <div class="item__row item__details">
+
+                    <div class="offer__languages">
+                        <span class="details__prefix">languages:</span>
+                        <span class="language__item">C#</span>
+                        <span class="language__item">TypeScript</span>
+                        <span class="language__item">HTML5</span>
+                        <span class="language__item">SASS</span>
+                    </div>
+                    <div class="offer__technologies">
+                        <span class="details__prefix">technologies:</span>
+                        <span class="technology__item">.NET</span>
+                        <span class="technology__item">ASP.NET</span>
+                        <span class="technology__item">Angular</span>
+                    </div>
+                    <div class="offer__finances">
+                        <span class="details__prefix">salary:</span>
+                        <span class="offer__salary">11 000 - 13 000 PLN</span>
+                        <span class="offer__contracts">B2B</span>
+                    </div>
+                </div>
+                <div class="item__row item__link">
+                    <a href="https://bulldogjob.pl/companies/jobs" class="offer__link">external offer link</a>
+                </div>
+            </article>
+        </div>
+    </section>
     
 
 {% endblock %}
