Change static files structure

--- a/templates/base.html
+++ b/templates/base.html
@@ -6,12 +6,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <link rel="stylesheet" type="text/css" href="{% static 'styles/base.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'styles/header.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'styles/navigation.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'styles/footer.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'styles/common.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static app|add:'/styles/'|add:page|add:'.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'base.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'header.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'navigation.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'footer.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'common.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static app|add:'/'|add:page|add:'.css' %}">
 
     <!-- these two files will be downloaded in static files in production! -->
     <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
@@ -35,7 +35,7 @@
             {% include "./footer.html" %}
         </footer>
     </div>
-    <script src="{% static 'scripts/main.js' %}"></script>
-    <script src="{% static app|add:'/scripts/'|add:page|add:'.js' %}"></script>
+    <script src="{% static 'main.js' %}"></script>
+    <script src="{% static app|add:'/'|add:page|add:'.js' %}"></script>
 </body>
 </html>
