--- a/templates/header.html
+++ b/templates/header.html
@@ -4,5 +4,5 @@
     <h1 class="header__title">Job<span class="title__suffix">aid</span></h1>
     <h2 class="header__subtitle">Find job of your dreams</h2>
 </div>
-<img src="{% static 'images/job_detective.png' %}" alt="job searching picture" class="header__image">
+<img src="{% static 'job_detective.png' %}" alt="job searching picture" class="header__image">
 
