--- a/static/styles/base.css
+++ b/static/styles/base.css
@@ -53,7 +53,7 @@ main {
     padding: 20px;
     /* background-color: rgb(190, 190, 190); */
     background-color: rgba(228, 228, 228, 0.5);
-    margin: 0 auto;
+    /* margin: 0 auto; */
 }
 
 footer {
