--- a/job_offers/templates/job_offers/admin.html
+++ b/job_offers/templates/job_offers/admin.html
@@ -5,7 +5,7 @@
 {% block content %}
     
 <section class="content__section admin">
-    <form action="" method="POST" enctype="multipart/form-data" class="admin__form">
+    <form action="/admin/" method="POST" enctype="multipart/form-data" class="admin__form">
         {% csrf_token %}
         <img src="{% static 'images/fingerprint.png' %}" alt="" class="admin__image">
         <h2 class="admin__subtitle">So you pretend to be an admin?</h2>
@@ -14,6 +14,7 @@
         <input type="file" name="datafile" class="admin__file form__input ">
         <label class="password__label">Enter password:</label>
         <input type="password" name="password" class="admin__password form__input">
+        <button type="submit" class="admin__submit">SUBMIT</button>
     </form>
 </section>
 
