--- a/static/styles/base.css
+++ b/static/styles/base.css
@@ -54,6 +54,9 @@ main {
     /* background-color: rgb(190, 190, 190); */
     background-color: rgba(228, 228, 228, 0.5);
     /* margin: 0 auto; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 footer {
