little styles improvements :)

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -14,6 +14,8 @@
     <section class="footer__info">
         <span class="footer__title">PITE 2020 Summer</span>
         <p class="footer__description">This is project for Python in the Enterprise course at WFiIS, AGH University of Science and Technology</p>
-        <img  class="footer__github" src="{% static 'images/github.png' %}" alt="">
+        <a href="https://github.com/Fadikk367/Jobaid">
+            <img  class="footer__github" src="{% static 'images/github.png' %}" alt="">
+        </a>
     </section>
 </div>
