--- a/statistics_and_charts/templates/statistics_and_charts/statistics.html
+++ b/statistics_and_charts/templates/statistics_and_charts/statistics.html
@@ -2,5 +2,5 @@
 {% block content %}
     <h2>Statistics and charts Page</h2>
     <h3>test chart to check if library is working</h3>
-    <div class="chart__example" style="width: 800px; height: 400px;"></div>
+    <div class="chart__example" style="width: 800px; height: 400px;" id="example"></div>
 {% endblock content %}
