--- a/job_offers/static/job_offers/styles/offers.css
+++ b/job_offers/static/job_offers/styles/offers.css
@@ -30,7 +30,6 @@
     border-radius: 3px;
     border: none;
     box-shadow: none;
-    /* background-color: rgb(240, 240, 240); */
     box-sizing: border-box;
 }
 
@@ -130,7 +129,6 @@
     margin-bottom: 20px;
     display: flex;
     flex-direction: column;
-    /* padding: 10px; */
     -webkit-box-shadow: 8px 9px 25px -7px rgba(122,122,122,1);
     -moz-box-shadow: 8px 9px 25px -7px rgba(122,122,122,1);
     box-shadow: 8px 9px 25px -7px rgba(122,122,122,1);
@@ -149,9 +147,7 @@
 
 .item__title {
     padding: 10px;
-    /* background-image: linear-gradient(to right, rgb(224, 90, 90), rgb(233, 205, 81)); */
     background-image: linear-gradient(to right, rgb(118, 118, 228), rgb(131, 183, 241));
-    /* background-image: linear-gradient(to right, rgb(38, 139, 85), rgb(185, 218, 77)); */
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
 }
@@ -183,7 +179,6 @@
     margin-right: 20px;
     display: flex;
     align-items: center;
-    /* justify-content: center; */
 }
 
 .details__salary {
@@ -193,8 +188,15 @@
     align-items: flex-start;
 }
 
-.language__item, .technology__item {
-    /* flex: 1; */
+.language__item {
+    display: block;
+    padding: 5px;
+    margin: 0 2px;
+    background-color: rgb(126, 172, 133);   
+    border-radius: 5px;
+}
+
+.technology__item {
     display: block;
     padding: 5px;
     margin: 0 2px;
@@ -202,15 +204,12 @@
     border-radius: 5px;
 }
 
-.technology__item {
-    background-color: rgb(106, 153, 113);    
-}
-
 .offer__technologies, .offer__finances, 
 .offer__languages {
     display: flex;
     justify-content: flex-start;
     margin-top: 5px;
+    overflow-x: hidden;
 }
 
 .offer__contracts {
