--- a/job_offers/templates/job_offers/content.html
+++ b/job_offers/templates/job_offers/content.html
@@ -54,7 +54,7 @@
     <section class="content__section offers">
         <h2 class="content__subtitle offers__title">Matched job offers:</h2>
         <div class="offer__list">
-            {% for offer in offers %}
+            {% for offer in page_obj %}
             <article class="offer__item">
                 <div class="item__row item__title">
                     <span class="offer__name">{{ offer.title }}</span>
@@ -103,6 +103,22 @@
             </article>
             {% endfor %}
         </div>
+        <!-- <div class="offers__pagination">
+            <div class="pagination__btns">
+                <button class="pagination__btn">first</button>
+                <button class="pagination__btn">previous</button>
+                <button class="pagination__btn">5</button>
+                <button class="pagination__btn">6</button>
+                <button class="pagination__btn">7*</button>
+                <button class="pagination__btn">8</button>
+                <button class="pagination__btn">9</button>
+                <button class="pagination__btn">next</button>
+                <button class="pagination__btn">last</button>
+            </div>
+            <div class="pagination__count">
+                Page <span>4</span> out of <span>230</span>
+            </div>
+        </div> -->
     </section>
     
 
