--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,7 @@
 
     <!-- these two files will be downloaded in static files in production! -->
     <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/5bd32016da.js" crossorigin="anonymous"></script>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 
     <title>Document</title>
