--- a/job_offers/static/job_offers/styles/offers.css
+++ b/job_offers/static/job_offers/styles/offers.css
@@ -158,7 +158,7 @@
 }
 
 .offer__experience {
-    width: 70px;
+    width: 90px;
 }
 
 .offer__location {
@@ -175,7 +175,7 @@
 
 
 .details__prefix {
-    width: 100px;
+    width: 140px;
     margin-right: 20px;
     display: flex;
     align-items: center;
@@ -333,17 +333,32 @@
     margin: 5px;
     font-size: 1em;
     min-width: 50px;
-    background-color: rgb(228, 185, 105);
-    border: 2px solid rgb(51, 51, 51);
+    background-color: rgb(255, 255, 255);
+    /* border: 2px solid rgb(75, 75, 75); */
     border-radius: 5px;
     display: flex;
     justify-content: center;
     align-items: center;
     text-decoration: none;
-    color: #4B4B4B;
+    color:rgb(75, 75, 75);
 }
 
 .pagination__btn-current {
     font-size: 1em;
-    background-color: rgb(226, 238, 96);
+    color: rgb(255, 255, 255);
+    font-weight: 500;
+    background-color: rgb(75, 75, 75);
+}
+
+
+
+
+
+
+
+
+
+.awesome-icon {
+    margin-right: 10px;
+    min-width: 20px;
 }
