--- a/static/styles/common.css
+++ b/static/styles/common.css
@@ -13,7 +13,8 @@
 .content__subtitle::after {
     content: "";
     display: block;
-    width: 50%;
+    width: 100%;
+    margin-top: 5px;
     height: 1px;
     background-color: rgb(56, 56, 56);
 }
