--- a/job_offers/templates/job_offers/content.html
+++ b/job_offers/templates/job_offers/content.html
@@ -10,26 +10,26 @@
         {% csrf_token %}
         <div class="form__row">
             <div class="form__item technologies">
-                <label class="form__label technologies__title">technologies:</label>
+                <label class="form__label technologies__title">Technologies:</label>
                 <input type="text" name="technologies" class="form__input technologies__input">
             </div>
             <div class="form__item experience">
-                <label class="form__label experience__title">experience:</label>
+                <label class="form__label experience__title">Experience:</label>
                 <select name="experience_level" class="form__input experience__select">
-                    <option class="experience__option" value="">all</option>
-                    <option class="experience__option" value="junior">junior</option>
-                    <option class="experience__option" value="mid">mid</option>
-                    <option class="experience__option" value="senior">senior</option>
+                    <option class="experience__option" value="all">All</option>
+                    <option class="experience__option" value="junior">Junior</option>
+                    <option class="experience__option" value="mid">Mid</option>
+                    <option class="experience__option" value="senior">Senior</option>
                 </select>
             </div>
         </div>
         <div class="form__row">  
             <div class="form__item location">
-                <label class="form__label location__title">location:</label>
+                <label class="form__label location__title">Location:</label>
                 <input type="text" name="location" class="form__input location__input">
             </div>
             <div class="form__item contracts">
-                <label class="form__label contracts__title">contracts:</label>
+                <label class="form__label contracts__title">Contracts:</label>
                 <div class="contracts__container">
                     <input type="checkbox" name="b2b" class="contracts__checkbox">
                     <label class="form__label contracts__label">B2B</label>
@@ -38,7 +38,7 @@
                 </div>
             </div>
             <div class="form__item salary">
-                <label class="form__label salary__title">salary:</label>
+                <label class="form__label salary__title">Salary:</label>
                 <div class="salary__container">
                     <input type="number" name="fork_min" class="form__input salary__input" placeholder="min">
                     <span class="salary__separator">-</span>
@@ -47,7 +47,7 @@
             </div>
         </div>
         <div class="form__row submit">
-            <button type="submit" class="form__submit">search</button>
+            <button type="submit" class="form__submit">Search</button>
         </div>
     </form>
     </section>
