--- a/templates/navigation.html
+++ b/templates/navigation.html
@@ -1,6 +1,6 @@
 <ul class="nav__list">
-    <li class="nav__item"><a href="{% url 'joboffers' %}" class="nav__link">home</a></li>
-    <li class="nav__item"><a href="{% url 'salary_prediction-home' %}" class="nav__link">prediction</a></li>
-    <li class="nav__item"><a href="{% url 'statistics_and_charts-home' %}" class="nav__link">statistics</a></li>
-    <li class="nav__item"><a href="{% url 'about' %}" class="nav__link">about</a></li>
+    <li class="nav__item"><a href="{% url 'joboffers' %}" class="nav__link">Home</a></li>
+    <li class="nav__item"><a href="{% url 'salary_prediction-home' %}" class="nav__link">Prediction</a></li>
+    <li class="nav__item"><a href="{% url 'statistics_and_charts-home' %}" class="nav__link">Statistics</a></li>
+    <li class="nav__item"><a href="{% url 'about' %}" class="nav__link">About</a></li>
 </ul>
