--- a/statistics_and_charts/static/statistics_and_charts/styles/statistics.css
+++ b/statistics_and_charts/static/statistics_and_charts/styles/statistics.css
@@ -1,4 +1,24 @@
-.chart__example {
+/* .chart__languages {
     width: 600px;
     height: 300px;
 }
+
+.chart__level{
+    width: 600px;
+    height: 300px;
+}
+
+.chart__technologies {
+    width: 600px;
+    height: 300px;
+}
+
+.chart__constracts{
+    width: 600px;
+    height: 300px;
+}
+
+.chart__company_size{
+    width: 600px;
+    height: 300px;
+} */
