--- a/templates/navigation.html
+++ b/templates/navigation.html
@@ -2,5 +2,6 @@
     <li class="nav__item"><a href="{% url 'joboffers' %}" class="nav__link">Home</a></li>
     <li class="nav__item"><a href="{% url 'salary_prediction-home' %}" class="nav__link">Prediction</a></li>
     <li class="nav__item"><a href="{% url 'statistics_and_charts-home' %}" class="nav__link">Statistics</a></li>
+    <li class="nav__item"><a href="{% url 'contribute' %}" class="nav__link">Contribute</a></li>
     <li class="nav__item"><a href="{% url 'about' %}" class="nav__link">About</a></li>
 </ul>
