Model upgrade & small refactor
Co-authored-by: fadikk367@gmail.com <fadikk367@gmail.com>

--- a/statistics_and_charts/static/statistics_and_charts/styles/statistics.css
+++ b/statistics_and_charts/static/statistics_and_charts/styles/statistics.css
@@ -1,4 +1,4 @@
-/* .chart__languages {
+.chart__languages {
     width: 600px;
     height: 300px;
 }
@@ -21,4 +21,4 @@
 .chart__company_size{
     width: 600px;
     height: 300px;
-} */
+}
