--- a/statistics_and_charts/templates/statistics_and_charts/statistics.html
+++ b/statistics_and_charts/templates/statistics_and_charts/statistics.html
@@ -2,9 +2,9 @@
 {% block content %}
     <h2>Statistics and charts Page</h2>
     <h3>test chart to check if library is working</h3>
-    <!-- <div class="chart__languages" style="width: 800px; height: 400px;" id="languages"></div>
+    <div class="chart__languages" style="width: 800px; height: 400px;" id="languages"></div>
     <div class="chart__level" style="width: 800px; height: 400px;" id="level"></div>
     <div class="chart__constracts" style="width: 800px; height: 400px;" id="constracts"></div>
     <div class="chart__technologies" style="width: 800px; height: 400px;" id="technologies"></div>
-    <div class="chart__company_size" style="width: 800px; height: 400px;" id="company_size"></div> -->
+    <div class="chart__company_size" style="width: 800px; height: 400px;" id="company_size"></div>
 {% endblock content %}
