Adjust styles before heroku upload

--- a/jobaid/templates/jobaid/about.html
+++ b/jobaid/templates/jobaid/about.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-    <div class="about">
-        <h2 class="about__title">About page</h2>
-    </div>
+<section class="content__section">
+    <h3 class="content__subtitle">One day there will be a story of our project</h3>
+</section>
 {% endblock content %}
