--- a/job_offers/static/job_offers/styles/offers.css
+++ b/job_offers/static/job_offers/styles/offers.css
@@ -31,11 +31,12 @@
     border: none;
     box-shadow: none;
     box-sizing: border-box;
+    background-color: white !important;
 }
 
-.form__input:hover, .form__input:read-write {
+/* .form__input:hover, .form__input:read-write {
     background-color: rgb(255, 255, 255);
-}
+} */
 
 
 .form__label {
