--- a/job_offers/templates/job_offers/content.html
+++ b/job_offers/templates/job_offers/content.html
@@ -11,38 +11,38 @@
         <div class="form__row">
             <div class="form__item technologies">
                 <label class="form__label technologies__title">Technologies:</label>
-                <input type="text" name="technologies" class="form__input technologies__input">
+                <input type="text" name="technologies" class="form__input technologies__input" placeholder="Java, Spring" value="{{ inputs.technologies }}"/>
             </div>
             <div class="form__item experience">
                 <label class="form__label experience__title">Experience:</label>
                 <select name="experience_level" class="form__input experience__select">
-                    <option class="experience__option" value="all">All</option>
-                    <option class="experience__option" value="junior">Junior</option>
-                    <option class="experience__option" value="mid">Mid</option>
-                    <option class="experience__option" value="senior">Senior</option>
+                    <option class="experience__option" value="all" {% if inputs.experience == 'all' %} selected {% endif %}>All</option>
+                    <option class="experience__option" value="junior" {% if inputs.experience == 'junior' %} selected {% endif %}>Junior</option>
+                    <option class="experience__option" value="mid" {% if inputs.experience == 'mid' %} selected {% endif %}>Mid</option>
+                    <option class="experience__option" value="senior" {% if inputs.experience == 'senior' %} selected {% endif %}>Senior</option>
                 </select>
             </div>
         </div>
         <div class="form__row">  
             <div class="form__item location">
                 <label class="form__label location__title">Location:</label>
-                <input type="text" name="location" class="form__input location__input">
+                <input type="text" name="location" class="form__input location__input" placeholder="Kraków" value="{{ inputs.location }}"/>
             </div>
             <div class="form__item contracts">
                 <label class="form__label contracts__title">Contracts:</label>
                 <div class="contracts__container">
-                    <input type="checkbox" name="b2b" class="contracts__checkbox" {%if form.b2b %} checked="checked" {% endif %}>
+                    <input type="checkbox" name="b2b" class="contracts__checkbox" {%if inputs.b2b %} checked="checked" {% endif %}>
                     <label class="form__label contracts__label">B2B</label>
-                    <input type="checkbox" name="uop" class="contracts__checkbox" {%if form.uop %} checked="checked" {% endif %}>
+                    <input type="checkbox" name="uop" class="contracts__checkbox" {%if inputs.uop %} checked="checked" {% endif %}>
                     <label class="form__label contracts__label">UOP</label>
                 </div>
             </div>
             <div class="form__item salary">
                 <label class="form__label salary__title">Salary:</label>
                 <div class="salary__container">
-                    <input type="number" name="fork_min" class="form__input salary__input" placeholder="min" value="{{ form.fork_min }}">
+                    <input type="number" name="fork_min" class="form__input salary__input" placeholder="7000" value="{{ inputs.fork_min }}">
                     <span class="salary__separator">-</span>
-                    <input type="number" name="fork_max" class="form__input salary__input" placeholder="max" value="{{ form.fork_max }}">
+                    <input type="number" name="fork_max" class="form__input salary__input" placeholder="9000" value="{{ inputs.fork_max }}">
                 </div>
             </div>
         </div>
@@ -125,7 +125,7 @@
                     </div>
                 </div>
                 <div class="item__row item__link">
-                    <a href="{{ offer.offer__link }}" class="offer__link">external offer link</a>
+                    <a href="{{ offer.offer_link }}" class="offer__link">external offer link</a>
                 </div>
             </article>
             {% endfor %}
