--- a/jobaid/templates/jobaid/about.html
+++ b/jobaid/templates/jobaid/about.html
@@ -10,11 +10,11 @@
     <p class="about__headers"> Stage 2: Building a wbsite <br/></p>
     <p class="about__text"> Based on completely new for us tool - Django - we have build whole of backend and frontend from scratch. The part with Front-end... Let's leave it with only one sentence: WE ARE NOT UX DESIGNERS. However the part with backend took as a great amount of time. Creating models, forms and querying database... Finding solutions for this issues made us to learn many new tools which was quite interesting.<br/><br/></p>
     <p class="about__headers"> Stage 3: ML <br/></p>
-    <p class="about__text"> Here's the most exciting and curious part - machine learning. (to be done by ADRIAN FURMAN & MATEUSZ GÓRCZANY)<br/><br/></p>
+    <p class="about__text"> Here's the most exciting and curious part - machine learning. <br/>(to be done by ADRIAN FURMAN & MATEUSZ GÓRCZANY) <br/>(EDIT - it has been already done in another report :D)<br/><br/></p>
     <p class="about__headers">Stage 4: Launch<br/></p>
     <p class="about__text">Through stars, through deep web, through dark net, through the second page of Google search... The project would fly for years since it is available on GitHub. <br/><br/></p>
     <p class="about__importatnt__note">IMPOTANT NOTE: JobAid is done only for purpose of learning and Python In The Enterprise course.<br/><br/></p>
     <p class="about__text">Having all things considered: great project, great people, fun and gaining knowlage. Could there be something more valueable? <br/><br/></p>
-    <p class="about__text">Kisses:<br/>Michał Ćwierz <br/>Adrian Furman <----- That's him! TEAM LEADER! TEAM LEADER!<br/>Mateusz Górczany<br/>Mikołaj Marchewa<br/>Konrad Walas<br/><br/></p>
+    <p class="about__text">Kisses:<br/>Michał Ćwierz <br/>Adrian Furman<br/>Mateusz Górczany<br/>Mikołaj Marchewa<br/>Konrad Walas<br/><br/></p>
 </section>
 {% endblock content %}
